{
  "version": 4,
  "terraform_version": "0.12.4",
  "serial": 11,
  "lineage": "90db42de-471e-cd08-65d5-d77461f438d7",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "default_instance",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0dacb0c129b49f529",
            "arn": "arn:aws:ec2:us-east-2:855082023952:instance/i-0fcc7491a75f5345b",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0fcc7491a75f5345b",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "TA_Migration",
            "monitoring": false,
            "primary_network_interface_id": "eni-092fe6cf35b074e7f",
            "private_dns": "ip-10-8-1-68.us-east-2.compute.internal",
            "private_ip": "10.8.1.68",
            "public_dns": "ec2-3-135-202-241.us-east-2.compute.amazonaws.com",
            "public_ip": "3.135.202.241",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-05132c0efcf7d2fad",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d503205fbc13b51b",
            "tags": {
              "Name": "default-instance"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0eb8a4f5e8cf3919d"
            ]
          },
          "depends_on": [
            "aws_security_group.admin_sg",
            "aws_subnet.tools_subnet_a",
            "data.aws_ami.latest-awsl2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "tools_igw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-08632498045806768",
            "owner_id": "855082023952",
            "tags": {
              "Name": "tools"
            },
            "vpc_id": "vpc-0c6094667ebb7eada"
          },
          "depends_on": [
            "aws_vpc.tools_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "tools_a_routetable",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0b2a1cb62227c80d3",
            "owner_id": "855082023952",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-08632498045806768",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "tools-a-routetable"
            },
            "vpc_id": "vpc-0c6094667ebb7eada"
          },
          "depends_on": [
            "aws_internet_gateway.tools_igw",
            "aws_vpc.tools_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "tools_b_routetable",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-00f09b367ae0de084",
            "owner_id": "855082023952",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-08632498045806768",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "tools-b-routetable"
            },
            "vpc_id": "vpc-0c6094667ebb7eada"
          },
          "depends_on": [
            "aws_internet_gateway.tools_igw",
            "aws_vpc.tools_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet_a_assoc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0867168c0c7cd1875",
            "route_table_id": "rtb-0b2a1cb62227c80d3",
            "subnet_id": "subnet-0d503205fbc13b51b"
          },
          "depends_on": [
            "aws_route_table.tools_a_routetable",
            "aws_subnet.tools_subnet_a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet_b_assoc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a249526767455362",
            "route_table_id": "rtb-00f09b367ae0de084",
            "subnet_id": "subnet-089b1bd8c7f758ff1"
          },
          "depends_on": [
            "aws_route_table.tools_b_routetable",
            "aws_subnet.tools_subnet_b"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "admin_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:855082023952:security-group/sg-0eb8a4f5e8cf3919d",
            "description": "Security group for access to admin",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0eb8a4f5e8cf3919d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "66.191.109.86/32",
                  "63.247.38.201/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "admin-sg",
            "name_prefix": null,
            "owner_id": "855082023952",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "admin-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c6094667ebb7eada"
          },
          "depends_on": [
            "aws_vpc.tools_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tools_subnet_a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:855082023952:subnet/subnet-0d503205fbc13b51b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.8.1.0/25",
            "id": "subnet-0d503205fbc13b51b",
            "map_public_ip_on_launch": true,
            "owner_id": "855082023952",
            "tags": {
              "Name": "tools_a"
            },
            "vpc_id": "vpc-0c6094667ebb7eada"
          },
          "depends_on": [
            "aws_vpc.tools_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tools_subnet_b",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:855082023952:subnet/subnet-089b1bd8c7f758ff1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.8.1.128/25",
            "id": "subnet-089b1bd8c7f758ff1",
            "map_public_ip_on_launch": true,
            "owner_id": "855082023952",
            "tags": {
              "Name": "tools_b"
            },
            "vpc_id": "vpc-0c6094667ebb7eada"
          },
          "depends_on": [
            "aws_vpc.tools_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "tools_vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:855082023952:vpc/vpc-0c6094667ebb7eada",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.8.1.0/24",
            "default_network_acl_id": "acl-024af0c79db2ca958",
            "default_route_table_id": "rtb-06eb6ed68b95e3aa1",
            "default_security_group_id": "sg-032e3a0500f1ef5c6",
            "dhcp_options_id": "dopt-9f8e6ff4",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0c6094667ebb7eada",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-06eb6ed68b95e3aa1",
            "owner_id": "855082023952",
            "tags": {
              "Name": "tools"
            }
          }
        }
      ]
    }
  ]
}